--- a/web/src/components/TeacherItem/styles.css
+++ b/web/src/components/TeacherItem/styles.css
@@ -56,7 +56,8 @@
   display: block;
 }
 
-.teacher-item footer button {
+.teacher-item footer a {
+  text-decoration: none;
   width: 20rem;
   height: 5.6rem;
   background: var(--color-secundary);
@@ -71,7 +72,7 @@
   transition: 0.2s;
 }
 
-.teacher-item footer button:hover {
+.teacher-item footer a:hover {
   background: var(--color-secundary-dark);
 }
 
