feat: create InputLogin component

--- a/web/src/assets/styles/global.css
+++ b/web/src/assets/styles/global.css
@@ -20,6 +20,8 @@
   --color-button-text: #ffffff;
   --color-box-base: #ffffff;
   --color-box-footer: #fafafc;
+  --color-title-login: #222;
+  --color-hover-link: #222;
 }
 
 * {
